x-scrollbar fix when liking/disliking pets on search pet results

--- a/FrontEnd/WebContent/css/petfinder.css
+++ b/FrontEnd/WebContent/css/petfinder.css
@@ -1,5 +1,6 @@
 body {
   padding-top: 20px;
+  overflow-x:hidden;
 }
 
 .mainView {
